<resources>
    <string name="app_name">HisabProto2</string>
    <string name="action_settings">Settings</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="amount">AMOUNT</string>
    <string name="add">ADD</string>
    <string name="min">MINIMIZE</string>
    <string name="show">SHOW</string>
    <string name="calc">CALCULATE</string>
    <string name="edit">EDIT</string>
    <string name="home">HOME</string>
    <string name="save">SAVE</string>
    <string name="title_activity_test_activity">test_activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
