<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        android:id="@+id/homeLinear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/fromInp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/from"
            android:paddingRight="10dp"/>
        <EditText
            android:id="@+id/toInp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/to"
            android:paddingRight="10dp"/>
        <EditText
            android:id="@+id/amountInp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:paddingRight="10dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:onClick="onAdd"/>
    </LinearLayout>
    <ListView
        android:id="@+id/homeLV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/homeLinear1"
        android:layout_above="@+id/homeLinear2">
    </ListView>
    <LinearLayout
        android:id="@+id/homeLinear2"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc"
            android:onClick="performCalculate"/>
    </LinearLayout>
    </RelativeLayout>
